Add image resources support
This reverts commit a10ad3a403be9cd0b89ecd877ce7d9a3cbb31963.

--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -16,6 +16,9 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-dns-zone-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/d/dns_zone_v2.html">telefonicaopencloud_dns_zone_v2</a>
             </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-images-image-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/images_image_v2.html">telefonicaopencloud_images_image_v2</a>
+            </li>
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-networking-network-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/d/networking_network_v2.html">telefonicaopencloud_networking_network_v2</a>
             </li>
@@ -92,6 +95,15 @@
             </li>
             <li<%= sidebar_current("docs-telefonicaopencloud-resource-dns-zone-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/r/dns_zone_v2.html">telefonicaopencloud_dns_zone_v2</a>
+            </li>
+          </ul>
+        </li>
+
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-images") %>>
+          <a href="#">Images Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-images-image-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/images_image_v2.html">telefonicaopencloud_images_image_v2</a>
             </li>
           </ul>
         </li>
