add resource of kms

--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -28,6 +28,12 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-s3-bucket-object") %>>
               <a href="/docs/providers/telefonicaopencloud/d/s3_bucket_object.html">telefonicaopencloud_s3_bucket_object</a>
             </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-kms-data-key-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/kms_data_key_v1.html">telefonicaopencloud_kms_data_key_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-kms-key-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/kms_key_v1.html">telefonicaopencloud_kms_key_v1</a>
+            </li>
           </ul>
         </li>
 
@@ -188,6 +194,15 @@
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-telefonicaopencloud-resource-vpc-eip-v1") %>>
               <a href="/docs/providers/telefonicaopencloud/r/vpc_eip_v1.html">telefonicaopencloud_vpc_eip_v1</a>
+            </li>
+          </ul>
+        </li>
+
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-kms") %>>
+          <a href="#">KMS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-kms-key-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/kms_key_v1.html">telefonicaopencloud_kms-key-v1</a>
             </li>
           </ul>
         </li>
