add sfs resource docs

--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -28,6 +28,9 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-s3-bucket-object") %>>
               <a href="/docs/providers/telefonicaopencloud/d/s3_bucket_object.html">telefonicaopencloud_s3_bucket_object</a>
             </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-sfs-file-system-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
+            </li>
           </ul>
         </li>
 
@@ -188,6 +191,14 @@
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-telefonicaopencloud-resource-vpc-eip-v1") %>>
               <a href="/docs/providers/telefonicaopencloud/r/vpc_eip_v1.html">telefonicaopencloud_vpc_eip_v1</a>
+            </li>
+          </ul>
+        </li>
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-sfs") %>>
+          <a href="#">SFS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-sfs-file-system-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
             </li>
           </ul>
         </li>
