--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -113,6 +113,18 @@
             </li>
           </ul>
         </li>
+	
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-mrs") %>>
+          <a href="#">MRS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-mrs-cluster-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/mrs_cluster_v1.html">telefonicaopencloud_mrs_cluster_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-mrs-job-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/mrs_job_v1.html">telefonicaopencloud_mrs_job_v1</a>
+            </li>
+          </ul>
+        </li>
 
         <li<%= sidebar_current("docs-telefonicaopencloud-resource-networking") %>>
           <a href="#">Networking Resources</a>
