--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -278,8 +278,17 @@
               </li>
           </ul>
         </li>
-
-
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-dms") %>>
+          <a href="#">DMS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-dms-queue-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/dms_queue_v1.html">telefonicaopencloud_dms_queue_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-dms-group-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/dms_group_v1.html">telefonicaopencloud_dms_group_v1</a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   <% end %>
