add VBS Backup and Policy resource docs

--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -49,6 +49,12 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-sfs-file-system-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/d/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
             </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-vbs-backup-policy-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/vbs_backup_policy_v2.html">telefonicaopencloud_vbs_backup_policy_v2</a>
+            </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-datasource-vbs-backup-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/vbs_backup_v2.html">telefonicaopencloud_vbs_backup_v2</a>
+            </li>
           </ul>
         </li>
 
@@ -258,6 +264,17 @@
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-telefonicaopencloud-resource-sfs-file-system-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/r/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
+            </li>
+          </ul>
+        </li>
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-vbs") %>>
+          <a href="#">VBS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-vbs-backup-policy-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/vbs_backup_policy_v2.html">telefonicaopencloud-vbs-backup-policy-v2</a>
+            </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-vbs-backup-v2") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/vbs_backup_v2.html">telefonicaopencloud-vbs-backup-v2</a>
             </li>
           </ul>
         </li>
