--- a/website/telefonicaopencloud.erb
+++ b/website/telefonicaopencloud.erb
@@ -49,6 +49,9 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-datasource-sfs-file-system-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/d/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
             </li>
+            <li<%= sidebar_current("docs-telefonicaopencloud-cts-tracker-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/d/cts_tracker_v1.html">telefonicaopencloud_cts_tracker_v1</a>
+            </li>
           </ul>
         </li>
 
@@ -259,6 +262,13 @@
             <li<%= sidebar_current("docs-telefonicaopencloud-resource-sfs-file-system-v2") %>>
               <a href="/docs/providers/telefonicaopencloud/r/sfs_file_system_v2.html">telefonicaopencloud_sfs_file_system_v2</a>
             </li>
+          </ul>
+        </li>
+        <li<%= sidebar_current("docs-telefonicaopencloud-resource-cts") %>>
+          <a href="#">CTS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-telefonicaopencloud-resource-cts-tracker-v1") %>>
+              <a href="/docs/providers/telefonicaopencloud/r/cts_tracker_v1.html">telefonicaopencloud_cts_tracker_v1</a>
           </ul>
         </li>
 
